--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,14 @@
 name: Publish
-
 on:
   push:
-    tags:
-      - v*.*.*
-      - v*.*.*-*.*
+    branches:
+      - "release/v*"
 
 env:
-  IMAGE_OWNER: cpbuildtools
-  IMAGE_REPO: angular-devcontainer
-  IMAGE_NAME: angular-devcontainer
+  IMAGE_NAME: ${{ github.event.repository.name }}
+
+#  IMAGE_OWNER: cpbuildtools
+#  IMAGE_REPO: angular-devcontainer
 
 jobs:
   publish:
@@ -17,43 +16,57 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Parse Version
-        id: version
+      - name: Get package version
+        id: package_version_str
+        uses: martinbeentjes/npm-get-version-action@master
+
+      - name: Check if tag exists for version '${{ steps.package_version_str.outputs.current-version }}'
+        uses: mukunku/tag-exists-action@v1.0.0
+        id: checkTag
+        with:
+          tag: "v${{ steps.package_version_str.outputs.current-version }}"
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
+      - name: Exit if tag exists
+        if: ${{ steps.checkTag.outputs.exists == 'true' }}
+        run: exit 1
+
+      - name: Parse package version
+        id: pkgVersion
         uses: doptools/action-parse-semver@main
         with:
-          version: "${{ github.ref }}"
-          versionRegex: '\/v(.*)$'
+          version: "${{ steps.package_version_str.outputs.current-version }}"
+          versionRegex: "(.*)"
 
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
-
-      - name: Log into registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
-
-
-      - name: Push image
-        run: |
-          IMAGE_ID=docker.pkg.github.com/$IMAGE_OWNER/$IMAGE_REPO/$IMAGE_NAME
-
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-
-          docker tag $IMAGE_NAME $IMAGE_ID:${{steps.version.outputs.full}}
-          docker push $IMAGE_ID:${{steps.version.outputs.full}}
-
-          docker tag $IMAGE_NAME $IMAGE_ID:latest
-          docker push $IMAGE_ID:latest
-
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Generated Release ${{ github.ref }}
-          draft: false
-          prerelease: ${{ steps.version.outputs.isPrerelease }}
+  #    - name: Log into registry
+  #      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+#
+#    - name: Push image
+#      run: |
+#        IMAGE_ID=docker.pkg.github.com/$IMAGE_OWNER/$IMAGE_REPO/$IMAGE_NAME
+#
+#        # Change all uppercase to lowercase
+#        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+#
+#        docker tag $IMAGE_NAME $IMAGE_ID:${{steps.version.outputs.full}}
+#        docker push $IMAGE_ID:${{steps.version.outputs.full}}
+#
+#        docker tag $IMAGE_NAME $IMAGE_ID:latest
+#        docker push $IMAGE_ID:latest
+#
+#    - name: Create Release
+#      id: create_release
+#      uses: actions/create-release@v1
+#      env:
+#        GITHUB_TOKEN: ${{ github.token }}
+#      with:
+#        tag_name: ${{ github.ref }}
+#        release_name: Release ${{ github.ref }}
+#        body: |
+#          Generated Release ${{ github.ref }}
+#        draft: false
+#        prerelease: ${{ steps.version.outputs.isPrerelease }}
+#
