--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Tag image
         run: |
-          IMAGE_ID=docker.pkg.github.com/${github.repository}/${{ github.event.repository.name }}
+          IMAGE_ID=docker.pkg.github.com/${{github.repository}}/${{ github.event.repository.name }}
           echo $IMAGE_ID
     #  - name: Build image
     #    run: docker build . --file Dockerfile --tag ${{ github.event.repository.name }}
