--- a/.github/workflows/check_release_branch_version.yml
+++ b/.github/workflows/check_release_branch_version.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Get package version
         id: package_version_str
